--- a/app/imports/ui/pages/landing-page.html
+++ b/app/imports/ui/pages/landing-page.html
@@ -1,4 +1,4 @@
-<template name="Home_Page">
+<template name="Landing_Page">
   <div class="ui grid text container">
 
     <div class="middle aligned centered eight wide column">
