Created mockup of user home page

--- a/app/imports/ui/pages/home-page.html
+++ b/app/imports/ui/pages/home-page.html
@@ -1,12 +1,3 @@
 <template name="Home_Page">
-  <div class="ui grid text container">
-
-    <div class="middle aligned centered eight wide column">
-      <p>Find other musicians with similar skill levels and musical tastes to perform or simply jam with, all at the University of Hawaii.</p>
-    </div>
-
-    <div style="background-color: #DCAD75" class="eight wide column">
-      {{> Register}}
-    </div>
-  </div>
+  {{> Landing_Page}}
 </template>
