New mockup for edit profile page.
Changed Instrument and Musical Tastes to dropdown menus. Added fields to
specify availability.

--- a/app/imports/ui/pages/edit-profile-page.html
+++ b/app/imports/ui/pages/edit-profile-page.html
@@ -6,129 +6,25 @@
         <textarea rows="5"></textarea>
       </div>
 
-      <div class="inline fields">
-        <label>Instruments</label>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Bass</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Drums</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Guitar</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Piano</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Vocals</label>
-          </div>
-        </div>
+      {{> Select_Form_Control label="Instruments" options=instruments errorMessage=(fieldError "instruments") multiple=true }}
+
+      {{> Select_Form_Control label="Musical Tastes" options=tastes errorMessage=(fieldError "tastes") multiple=true }}
+
+      {{> Radio_Form_Control label="Skill Level" name="Level" required=false radios=levels errorMessage=(fieldError "level") }}
+
+      {{> Checkbox_Form_Control label="Goals" checkboxes=goals }}
+
+      <h4>Available</h4>
+
+      {{> Checkbox_Form_Control label="Days" checkboxes=days }}
+
+      <div class="two fields">
+        {{> Select_Form_Control label="From" required=false options=times errorMessage=(fieldError "from") }}
+        {{> Select_Form_Control label="To" required=false options=times errorMessage=(fieldError "to") }}
       </div>
 
-      <div class="inline fields">
-        <label>Musical Tastes</label>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Classical</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Blues</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Jazz</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Rock</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Pop</label>
-          </div>
-        </div>
-      </div>
+      <button class="ui button" type="submit">Update</button>
 
-      <div class="inline fields">
-        <label>Skill Level</label>
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Beginner</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Intermediate</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Expert</label>
-          </div>
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <label>Goals</label>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Informal Jam Sessions</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Improve</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui checkbox">
-            <input type="checkbox" tabindex="0" class="hidden">
-            <label>Perform</label>
-          </div>
-        </div>
-      </div>
-
-      <div class="field">
-        <label><i class="red youtube play icon"></i>YouTube Link</label>
-        <input type="text" name="youtube">
-      </div>
-
-      <div class="field">
-        <label><i class="orange soundcloud icon"></i>SoundCloud Link</label>
-        <input type="text" name="soundcloud">
-      </div>
-      <button class="ui button" type="submit">Submit</button>
     </form>
   </div>
-
 </template>
