Put YouTube and SoundCloud fields back
Accidentally removed two fields in the new edit profile page mockup.
This is why we read carefully before deleting segments of code. And why
we publish branches.

--- a/app/imports/ui/pages/edit-profile-page.html
+++ b/app/imports/ui/pages/edit-profile-page.html
@@ -23,6 +23,16 @@
         {{> Select_Form_Control label="To" required=false options=times errorMessage=(fieldError "to") }}
       </div>
 
+      <div class="field">
+        <label><i class="red youtube play icon"></i>YouTube Link</label>
+        <input type="text" name="youtube">
+      </div>
+
+      <div class="field">
+        <label><i class="orange soundcloud icon"></i>SoundCloud Link</label>
+        <input type="text" name="soundcloud">
+      </div>
+
       <button class="ui button" type="submit">Update</button>
 
     </form>
